# doc/swagger/simplebank.swagger.json
@@ -9,6 +9,10 @@
       "email": "randomspaghettiguy@gmail.com"
     }
   },
+  "schemes": [
+    "http",
+    "https"
+  ],
   "tags": [
     {
       "name": "SimpleBank"
@@ -23,6 +27,8 @@
   "paths": {
     "/v1/create_user": {
       "post": {
+        "summary": "Create new user",
+        "description": "Use this API to create a new user",
         "operationId": "SimpleBank_CreateUser",
         "responses": {
           "200": {
@@ -55,6 +61,8 @@
     },
     "/v1/login_user": {
       "post": {
+        "summary": "Create new user",
+        "description": "Use this API to create a new user",
         "operationId": "SimpleBank_LoginUser",
         "responses": {
           "200": {
